# android-view-refactor

./: .gitignore  AllTypeMetrics.csv  README.md  android_constants.py  android_view_refactor.py  designite.sh  designite_reports.py  requirements.txt  setup.cfg  setup.py
android_view_refactor/: android_constants.py  android_view_refactor.py
