[metadata]
name = android-view-refactor
author = Luis Cruz
author-email = luismirandacruz@gmail.com
summary = Package to automatically refactor Android XML views
license = MIT
description-file =
    README.md
home-page = https://luiscruz.github.io/
requires-python = >=2.6
classifier = 
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
 
[files]
packages =
    android_view_refactor

[entry_points]
console_scripts =
    android-view-refactor = android_view_refactor.android_view_refactor:tool

[flake8]
filename = *.py
ignore = E101,E241